<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_search"
        android:name="prime.mapapp.mapsappv2.ui.search.searchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_home"
        android:name="prime.mapapp.mapsappv2.ui.settings.settingsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_addplace" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="prime.mapapp.mapsappv2.ui.map.mapFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="prime.mapapp.mapsappv2.ui.add.addFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_settings" />
</navigation>